--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dembase
 Type: Package
-Title: Analysing cross-classified data about populations
+Title: Analysing Cross-Classified Data about Populations
 Version: 0.0.0.9100
 Date: 2016-09-21
 Authors@R: c(
