--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(getIBefore)
 export(getIShared)
 export(growth)
 export(hasRegularAgeTime)
+export(iFemale)
 export(impute)
 export(incrementDimScale)
 export(inferDimScale)
