added sex dimtype and Sexes Dimscale. Added functions for expanding ax

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(dbind)
 export(dimscales)
 export(dimtypes)
 export(dplot)
+export(expandAx)
 export(expandCategories)
 export(exposure)
 export(extend)
@@ -58,10 +59,12 @@ export(getIShared)
 export(growth)
 export(hasRegularAgeTime)
 export(iFemale)
+export(iMale)
 export(impute)
 export(incrementDimScale)
 export(inferDimScale)
 export(limits)
+export(makeAxStart)
 export(makeCollapseTransformExtra)
 export(makeCompatible)
 export(makeMetaDataSubarraysBefore)
