--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(pairAligned)
 export(perturb)
 export(redistribute)
 export(redistributeCategory)
+export(redistributeToEndAges)
 export(resetIterations)
 export(slab)
 export(stepLengths)
@@ -181,6 +182,7 @@ exportMethods(plot)
 exportMethods(prop.table)
 exportMethods(redistribute)
 exportMethods(redistributeCategory)
+exportMethods(redistributeToEndAges)
 exportMethods(resetIterations)
 exportMethods(show)
 exportMethods(slab)
