added help for reallocateToEndAges and fixed bug in extrapolate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,9 +73,9 @@ export(midpoints)
 export(nIteration)
 export(pairAligned)
 export(perturb)
+export(reallocateToEndAges)
 export(redistribute)
 export(redistributeCategory)
-export(redistributeToEndAges)
 export(resetIterations)
 export(slab)
 export(stepLengths)
@@ -180,9 +180,9 @@ exportMethods(pairAligned)
 exportMethods(perturb)
 exportMethods(plot)
 exportMethods(prop.table)
+exportMethods(reallocateToEndAges)
 exportMethods(redistribute)
 exportMethods(redistributeCategory)
-exportMethods(redistributeToEndAges)
 exportMethods(resetIterations)
 exportMethods(show)
 exportMethods(slab)
