--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(collapseDimension)
 export(collapseIntervals)
 export(collapseIterations)
 export(collapseOrigDest)
+export(datesToAge)
 export(dbind)
 export(dimscales)
 export(dimtypes)
