added accession and isInternallyConsistent plus related helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(Net)
 export(Pool)
 export(Values)
 export(ValuesOne)
+export(accession)
 export(addDimension)
 export(addIterationsToMetadata)
 export(ageTimeStep)
@@ -64,6 +65,7 @@ export(iMale)
 export(impute)
 export(incrementDimScale)
 export(inferDimScale)
+export(isInternallyConsistent)
 export(limits)
 export(makeAxStart)
 export(makeCollapseTransformExtra)
