added ageMin, ageMax

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ S3method(plot,Values)
 S3method(summary,DemographicArray)
 S3method(t,DemographicArray)
 export("DimScales<-")
+export("ageMax<-")
+export("ageMin<-")
 export("dimscales<-")
 export("dimtypes<-")
 export("slab<-")
@@ -33,6 +35,8 @@ export(ValuesOne)
 export(accession)
 export(addDimension)
 export(addIterationsToMetadata)
+export(ageMax)
+export(ageMin)
 export(ageTimeStep)
 export(alignPair)
 export(attachSubtotals)
@@ -127,6 +131,8 @@ exportClasses(Transform)
 exportClasses(Values)
 exportMethods("%in%")
 exportMethods("[")
+exportMethods("ageMax<-")
+exportMethods("ageMin<-")
 exportMethods("dim<-")
 exportMethods("dimnames<-")
 exportMethods("dimscales<-")
@@ -140,6 +146,8 @@ exportMethods(Ops)
 exportMethods(Summary)
 exportMethods(Values)
 exportMethods(addDimension)
+exportMethods(ageMax)
+exportMethods(ageMin)
 exportMethods(ageTimeStep)
 exportMethods(alignPair)
 exportMethods(aperm)
