fixed bug in documentation for ageMinMax and added functions setAgeMin and setAgeMax

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,8 @@ export(reallocateToEndAges)
 export(redistribute)
 export(redistributeCategory)
 export(resetIterations)
+export(setAgeMax)
+export(setAgeMin)
 export(slab)
 export(stepLengths)
 export(subarray)
@@ -195,6 +197,8 @@ exportMethods(reallocateToEndAges)
 exportMethods(redistribute)
 exportMethods(redistributeCategory)
 exportMethods(resetIterations)
+exportMethods(setAgeMax)
+exportMethods(setAgeMin)
 exportMethods(show)
 exportMethods(slab)
 exportMethods(stepLengths)
