added isConsistent, makeConsistent, derivePopulation for Movements accounts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(t,DemographicArray)
 export("DimScales<-")
 export("ageMax<-")
 export("ageMin<-")
+export("componentNames<-")
 export("dimscales<-")
 export("dimtypes<-")
 export("slab<-")
@@ -49,8 +50,11 @@ export(collapseDimension)
 export(collapseIntervals)
 export(collapseIterations)
 export(collapseOrigDest)
+export(componentNames)
+export(components)
 export(datesToAge)
 export(dbind)
+export(derivePopulation)
 export(dimscales)
 export(dimtypes)
 export(dplot)
@@ -69,23 +73,26 @@ export(iMale)
 export(impute)
 export(incrementDimScale)
 export(inferDimScale)
-export(isInternallyConsistent)
+export(isConsistent)
 export(limits)
 export(makeAxStart)
 export(makeCollapseTransformExtra)
 export(makeCompatible)
+export(makeConsistent)
 export(makeMetaDataSubarraysBefore)
 export(makeTransform)
 export(midpoints)
 export(nIteration)
 export(pairAligned)
 export(perturb)
+export(population)
 export(reallocateToEndAges)
 export(redistribute)
 export(redistributeCategory)
 export(resetIterations)
 export(setAgeMax)
 export(setAgeMin)
+export(setComponentNames)
 export(slab)
 export(stepLengths)
 export(subarray)
@@ -110,6 +117,7 @@ exportClasses(CountsWithSubtotals)
 exportClasses(CountsWithSubtotalsInternal)
 exportClasses(DemographicAccount)
 exportClasses(DemographicArray)
+exportClasses(DemographicArrayOrNumeric)
 exportClasses(Entries)
 exportClasses(EntriesMovements)
 exportClasses(EntriesTransitions)
@@ -135,6 +143,7 @@ exportMethods("%in%")
 exportMethods("[")
 exportMethods("ageMax<-")
 exportMethods("ageMin<-")
+exportMethods("componentNames<-")
 exportMethods("dim<-")
 exportMethods("dimnames<-")
 exportMethods("dimscales<-")
@@ -164,6 +173,8 @@ exportMethods(collapseDimension)
 exportMethods(collapseIntervals)
 exportMethods(collapseIterations)
 exportMethods(collapseOrigDest)
+exportMethods(componentNames)
+exportMethods(components)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(dimscales)
@@ -192,6 +203,7 @@ exportMethods(names)
 exportMethods(pairAligned)
 exportMethods(perturb)
 exportMethods(plot)
+exportMethods(population)
 exportMethods(prop.table)
 exportMethods(reallocateToEndAges)
 exportMethods(redistribute)
@@ -199,6 +211,7 @@ exportMethods(redistributeCategory)
 exportMethods(resetIterations)
 exportMethods(setAgeMax)
 exportMethods(setAgeMin)
+exportMethods(setComponentNames)
 exportMethods(show)
 exportMethods(slab)
 exportMethods(stepLengths)
