added datesToTriangles and extended datesToAges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(collapseOrigDest)
 export(componentNames)
 export(components)
 export(datesToAge)
+export(datesToTriangle)
 export(dbind)
 export(derivePopulation)
 export(dimscales)
