finished(ish) datesToAgeGroups, datesToPeriods, datesToTriangles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,8 +52,9 @@ export(collapseIterations)
 export(collapseOrigDest)
 export(componentNames)
 export(components)
-export(datesToAge)
-export(datesToTriangle)
+export(datesToAgeGroups)
+export(datesToPeriods)
+export(datesToTriangles)
 export(dbind)
 export(derivePopulation)
 export(dimscales)
