BirthsMovements adds age dimension if template has one

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dembase
 Type: Package
 Title: Analysing Cross-Classified Data about Populations
-Version: 0.0.0.9208
-Date: 2017-07-03
+Version: 0.0.0.9209
+Date: 2017-07-11
 Authors@R: c(
     person(given = "John",
            family = "Bryant",
@@ -33,6 +33,7 @@ Imports:
 Suggests:
     testthat,
     demdata,
-    knitr
+    dplyr,
+    knitr,
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
