--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,6 +210,7 @@ exportMethods(prop.table)
 exportMethods(reallocateToEndAges)
 exportMethods(redistribute)
 exportMethods(redistributeCategory)
+exportMethods(resetDiag)
 exportMethods(resetIterations)
 exportMethods(setAgeMax)
 exportMethods(setAgeMin)
