fixed bugs in datesTo* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(collapseOrigDest)
 export(componentNames)
 export(components)
 export(datesToAgeGroups)
+export(datesToCohorts)
 export(datesToPeriods)
 export(datesToTriangles)
 export(dbind)
