--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(Pool)
 export(Values)
 export(ValuesOne)
 export(accession)
+export(addDest)
 export(addDimension)
 export(addIterationsToMetadata)
 export(ageMax)
@@ -159,6 +160,7 @@ exportMethods(DimScales)
 exportMethods(Ops)
 exportMethods(Summary)
 exportMethods(Values)
+exportMethods(addDest)
 exportMethods(addDimension)
 exportMethods(ageMax)
 exportMethods(ageMin)
