fixed bugs in completedYears and completedResults which were leading to strange results in datesTo* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(impute)
 export(incrementDimScale)
 export(inferDimScale)
 export(isConsistent)
+export(isPositiveIncrement)
 export(limits)
 export(makeAxStart)
 export(makeCollapseTransformExtra)
@@ -194,6 +195,7 @@ exportMethods(growth)
 exportMethods(hasRegularAgeTime)
 exportMethods(impute)
 exportMethods(incrementDimScale)
+exportMethods(isPositiveIncrement)
 exportMethods(labels)
 exportMethods(length)
 exportMethods(limits)
