Changed addDest to addPair. Added exposureBirths.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,9 +34,9 @@ export(Pool)
 export(Values)
 export(ValuesOne)
 export(accession)
-export(addDest)
 export(addDimension)
 export(addIterationsToMetadata)
+export(addPair)
 export(ageMax)
 export(ageMin)
 export(ageTimeStep)
@@ -65,6 +65,7 @@ export(dplot)
 export(expandAx)
 export(expandCategories)
 export(exposure)
+export(exposureBirths)
 export(extend)
 export(extrapolate)
 export(getIAfter)
@@ -161,8 +162,8 @@ exportMethods(DimScales)
 exportMethods(Ops)
 exportMethods(Summary)
 exportMethods(Values)
-exportMethods(addDest)
 exportMethods(addDimension)
+exportMethods(addPair)
 exportMethods(ageMax)
 exportMethods(ageMin)
 exportMethods(ageTimeStep)
@@ -189,6 +190,7 @@ exportMethods(dplot)
 exportMethods(drop)
 exportMethods(expandCategories)
 exportMethods(exposure)
+exportMethods(exposureBirths)
 exportMethods(extend)
 exportMethods(extrapolate)
 exportMethods(growth)
