added function intervalScore but have not done help yet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(iMale)
 export(impute)
 export(incrementDimScale)
 export(inferDimScale)
+export(intervalScore)
 export(isConsistent)
 export(isPositiveIncrement)
 export(limits)
