added function round3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -220,6 +220,7 @@ exportMethods(redistribute)
 exportMethods(redistributeCategory)
 exportMethods(resetDiag)
 exportMethods(resetIterations)
+exportMethods(round3)
 exportMethods(setAgeMax)
 exportMethods(setAgeMin)
 exportMethods(setComponentNames)
