added expandIntervals, though extra functionality needs to be added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(dimtypes)
 export(dplot)
 export(expandAx)
 export(expandCategories)
+export(expandIntervals)
 export(exposure)
 export(exposureBirths)
 export(extend)
@@ -190,6 +191,7 @@ exportMethods(dimtypes)
 exportMethods(dplot)
 exportMethods(drop)
 exportMethods(expandCategories)
+exportMethods(expandIntervals)
 exportMethods(exposure)
 exportMethods(exposureBirths)
 exportMethods(extend)
