added function ageToAgeGroup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(addPair)
 export(ageMax)
 export(ageMin)
 export(ageTimeStep)
+export(ageToAgeGroup)
 export(alignPair)
 export(attachSubtotals)
 export(canMakeCompatible)
