added function cleanAgeGroup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ export(attachSubtotals)
 export(canMakeCompatible)
 export(checkAge)
 export(checkAndTidyAlong)
+export(cleanAgeGroup)
+export(cleanAgeGroupConc)
 export(collapse)
 export(collapseCategories)
 export(collapseDimension)
