added yearToPeriod and fixed documentation for ageToAgeGroup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(tfr)
 export(thinIterations)
 export(toDouble)
 export(toInteger)
+export(yearToPeriod)
 exportClasses(Accession)
 exportClasses(Births)
 exportClasses(BirthsMovements)
