finished makeMissingAgeTimeDimScale. Added rotateAgeTime, but need tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(reallocateToEndAges)
 export(redistribute)
 export(redistributeCategory)
 export(resetIterations)
+export(rotateAgeTime)
 export(setAgeMax)
 export(setAgeMin)
 export(setComponentNames)
@@ -228,6 +229,7 @@ exportMethods(redistribute)
 exportMethods(redistributeCategory)
 exportMethods(resetDiag)
 exportMethods(resetIterations)
+exportMethods(rotateAgeTime)
 exportMethods(round3)
 exportMethods(setAgeMax)
 exportMethods(setAgeMin)
