changed yearToPeriod to timeToPeriod

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,10 +127,10 @@ export(subarray)
 export(subtotals)
 export(tfr)
 export(thinIterations)
+export(timeToPeriod)
 export(toDouble)
 export(toInteger)
 export(translate)
-export(yearToPeriod)
 exportClasses(Accession)
 exportClasses(Births)
 exportClasses(BirthsMovements)
