--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,7 +71,7 @@ export(collapseIterations)
 export(collapseOrigDest)
 export(componentNames)
 export(components)
-export(datesToAgeGroups)
+export(dateToAgeGroup)
 export(datesToCohorts)
 export(datesToPeriods)
 export(datesToTriangles)
@@ -127,10 +127,10 @@ export(subarray)
 export(subtotals)
 export(tfr)
 export(thinIterations)
-export(timeToPeriod)
 export(toDouble)
 export(toInteger)
 export(translate)
+export(yearToPeriod)
 exportClasses(Accession)
 exportClasses(Births)
 exportClasses(BirthsMovements)
