added function fillForward

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(exposure)
 export(exposureBirths)
 export(extend)
 export(extrapolate)
+export(fillForward)
 export(getIAfter)
 export(getIBefore)
 export(getIShared)
