writing tests for valueInInterval

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,6 +132,7 @@ export(timeToPeriod)
 export(toDouble)
 export(toInteger)
 export(translate)
+export(valueInInterval)
 exportClasses(Accession)
 exportClasses(Births)
 exportClasses(BirthsMovements)
@@ -273,6 +274,7 @@ exportMethods(toDouble)
 exportMethods(toInteger)
 exportMethods(translate)
 exportMethods(unname)
+exportMethods(valueInInterval)
 import(methods)
 importFrom(stats,quantile)
 useDynLib(dembase, .registration = TRUE)
