--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(derivePopulation)
 export(dimscales)
 export(dimtypes)
 export(dplot)
+export(dtabs)
 export(expandAx)
 export(expandCategories)
 export(expandIntervals)
