part way through simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(collapseIterations)
 export(collapseOrigDest)
 export(componentNames)
 export(components)
+export(credibleInterval)
 export(datesToAgeGroups)
 export(datesToCohorts)
 export(datesToPeriods)
@@ -219,6 +220,7 @@ exportMethods(collapseIterations)
 exportMethods(collapseOrigDest)
 exportMethods(componentNames)
 exportMethods(components)
+exportMethods(credibleInterval)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(dimscales)
