finished helper functions for simulation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(Concordance)
 export(Counts)
 export(CountsOne)
 export(DimScales)
+export(MSE)
 export(Movements)
 export(Net)
 export(Pool)
@@ -100,6 +101,7 @@ export(iMale)
 export(impute)
 export(incrementDimScale)
 export(inferDimScale)
+export(intervalContainsTruth)
 export(intervalScore)
 export(isConsistent)
 export(isPositiveIncrement)
@@ -134,7 +136,6 @@ export(timeToPeriod)
 export(toDouble)
 export(toInteger)
 export(translate)
-export(valueInInterval)
 exportClasses(Accession)
 exportClasses(Births)
 exportClasses(BirthsMovements)
@@ -237,6 +238,7 @@ exportMethods(growth)
 exportMethods(hasRegularAgeTime)
 exportMethods(impute)
 exportMethods(incrementDimScale)
+exportMethods(intervalContainsTruth)
 exportMethods(isPositiveIncrement)
 exportMethods(labels)
 exportMethods(length)
@@ -277,7 +279,6 @@ exportMethods(toDouble)
 exportMethods(toInteger)
 exportMethods(translate)
 exportMethods(unname)
-exportMethods(valueInInterval)
 import(methods)
 importFrom(stats,quantile)
 useDynLib(dembase, .registration = TRUE)
