working on simulation functions. Extended cleanAgeGroup to deal with life table representation age age groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(incrementDimScale)
 export(inferDimScale)
 export(intervalContainsTruth)
 export(intervalScore)
+export(intervalWidth)
 export(isConsistent)
 export(isPositiveIncrement)
 export(limits)
@@ -118,6 +119,7 @@ export(pairAligned)
 export(perturb)
 export(population)
 export(reallocateToEndAges)
+export(recodeCategories)
 export(redistribute)
 export(redistributeCategory)
 export(resetIterations)
@@ -239,6 +241,7 @@ exportMethods(hasRegularAgeTime)
 exportMethods(impute)
 exportMethods(incrementDimScale)
 exportMethods(intervalContainsTruth)
+exportMethods(intervalWidth)
 exportMethods(isPositiveIncrement)
 exportMethods(labels)
 exportMethods(length)
