added function 'pairToState'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ export(makeTransform)
 export(midpoints)
 export(nIteration)
 export(pairAligned)
+export(pairToState)
 export(perturb)
 export(population)
 export(reallocateToEndAges)
@@ -255,6 +256,7 @@ exportMethods(midpoints)
 exportMethods(nIteration)
 exportMethods(names)
 exportMethods(pairAligned)
+exportMethods(pairToState)
 exportMethods(perturb)
 exportMethods(plot)
 exportMethods(population)
