--- a/NAMESPACE
+++ b/NAMESPACE
@@ -195,6 +195,7 @@ exportMethods("slab<-")
 exportMethods(Compare)
 exportMethods(Counts)
 exportMethods(DimScales)
+exportMethods(MSE)
 exportMethods(Ops)
 exportMethods(Summary)
 exportMethods(Values)
@@ -262,6 +263,7 @@ exportMethods(plot)
 exportMethods(population)
 exportMethods(prop.table)
 exportMethods(reallocateToEndAges)
+exportMethods(recodeCategories)
 exportMethods(redistribute)
 exportMethods(redistributeCategory)
 exportMethods(resetDiag)
