--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(expandCategories)
 export(expandIntervals)
 export(exposure)
 export(exposureBirths)
+export(exposureHMD)
 export(extend)
 export(extrapolate)
 export(fillForward)
